--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                     <div id="eventsList"></div>
                     <div id="bookBothContainer" class="book-both-container hidden">
                         <p class="text-gray-700 mb-2">Want to book both events?</p>
-                        <button id="bookBothButton" class="book-both-button">Book Both Events</button>
+                        <button id="bookBothButton" class="book-both-button">Book Kynren and Park</button>
                     </div>
                     <p class="text-gray-500 text-sm mt-2" id="loadingStatus"></p>
                 </div>
